Several fixes for yangdocs plugin files based on review feedback:  - added / fixed missing copyright notices  - fixed spacing issues  - removed several uses of <dict>.keys()  - reformatted statement, type, identity docs to list description first  - added path prefix just above each statement name (issue #6 in oc-tools repo)  - added utility function to separate last path element from prefix in yangpath lib

--- a/plugins/templates/css/yangdoc.css
+++ b/plugins/templates/css/yangdoc.css
@@ -42,6 +42,11 @@ body {
    color: #01579B;
 }
 
+.statement-path {
+  color: #455A64;
+  font-size: 75%;
+}
+
 .module-type-text-label {
   font-weight: bold;
 
